--- a/cat.html
+++ b/cat.html
@@ -4,7 +4,8 @@
     <title>Cat Blog</title>
   </head>
   <body>
-    <h1>Taxonomy</h1>
+    <h1>Cat Taxonomy</h1>
+    <img src="http://lorempixel.com/400/200/" alt="Cat Image"/>
     <p>The domestic cat is believed to have evolved from the Near Eastern wildcat, whose range covers vast portions of the Middle East westward to the Atlantic coast of Africa Between 70,000 and 100,000 years ago the animal gave rise to the genetic lineage that eventually produced all domesticated cats, having diverged from the Near Eastern wildcat around 8,000 BC in the Middle East.</p>
 
     <h1>Nomenclature</h1>
