added links img and inline elements

--- a/cat.html
+++ b/cat.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Cat Taxonomy</h1>
-    <img src="http://lorempixel.com/400/200/" alt="Cat Image"/>
-    <p>The domestic cat is believed to have evolved from the Near Eastern wildcat, whose range covers vast portions of the Middle East westward to the Atlantic coast of Africa Between 70,000 and 100,000 years ago the animal gave rise to the genetic lineage that eventually produced all domesticated cats, having diverged from the Near Eastern wildcat around 8,000 BC in the Middle East.</p>
+    <img src="img/cat.jpg" height=200 width=200 alt="cat image">
+    <p>The domestic <em>cat</em> is believed to have evolved from the Near <strong>Eastern wildcat</strong>, whose range covers vast portions of the Middle East westward to the Atlantic coast of Africa Between 70,000 and 100,000 years ago the animal gave rise to the genetic lineage that eventually produced all domesticated cats, having diverged from the Near Eastern wildcat around 8,000 BC in the Middle East.</p>
 
     <h1>Nomenclature</h1>
     <p>The English word cat is in origin to many things</p>
@@ -18,5 +18,6 @@
       <li>Senses</li>
       <li>Diseases</li>
     </ol>
+    <p>my <a href="https://www.thatcatblog.com/">cat blog</a>!</p>
   </body>
 </html>
