introduced buttons and back ground color n text color

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Cat Blog</title>
   </head>
   <body>
+    <button class="bg-success" id="green">green</button>
+    <button class="bg-primary" id="blue">blue</button>
     <h1>Cat Taxonomy</h1>
+
+
+
     <img src="img/cat.jpg" height=200 width=200 alt="cat image">
     <p>The domestic <em>cat</em> is believed to have evolved from the Near <strong>Eastern wildcat</strong>, whose range covers vast portions of the Middle East westward to the Atlantic coast of Africa Between 70,000 and 100,000 years ago the animal gave rise to the genetic lineage that eventually produced all domesticated cats, having diverged from the Near Eastern wildcat around 8,000 BC in the Middle East.</p>
 
