original background added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <button class="bg-success" id="green">green</button>
     <button class="bg-primary" id="blue">blue</button>
+    <button class="bg-warning" id="original">original</button>
     <h1>Cat Taxonomy</h1>
 
 
